--- a/DashboardLogistico/App.config
+++ b/DashboardLogistico/App.config
@@ -2,7 +2,8 @@
 <configuration>
   <appSettings>
     <add key="CaminhoBanco" value="C:\Temp\banco.db"/>
-    <add key="SenhaBanco" value="ZWNtbWFzdGVy"/>
+    <add key="SenhaBanco" value="cmF2ZXg="/>
+    <add key="Version" value="1.0"/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
